deploy/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allocation-manager
  labels:
    app: allocation-manager
  annotations:
    kubernetes.io/change-cause: "<to be filled in deploy job command>"
spec:
  replicas: 1
  revisionHistoryLimit: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 20%
    type: RollingUpdate
  selector:
    matchLabels:
      app: allocation-manager
  template:
    metadata:
      labels:
        app: allocation-manager
    spec:
      containers:
        - name: allocation-manager
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/offender-management/offender-management-allocation-manager:latest
          imagePullPolicy: Always
          command: ['sh', '-c','bundle exec puma -p 3000 -C ./config/puma_prod.rb --pidfile /tmp/server.pid']
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 60
          resources:
            limits:
              memory: "1500Mi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "50m"
          envFrom:
            - configMapRef:
                name: shared-environment
            - secretRef:
                name: allocation-manager-secrets
          env:
            - name: POSTGRES_HOST
              valueFrom:
                secretKeyRef:
                  name: allocation-rds-instance-output
                  key: rds_instance_address
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: allocation-rds-instance-output
                  key: postgres_password
            - name: POSTGRES_NAME
              valueFrom:
                secretKeyRef:
                  name: allocation-rds-instance-output
                  key: postgres_name
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: allocation-rds-instance-output
                  key: postgres_user
            - name: REDIS_URL
              valueFrom:
                secretKeyRef:
                  name: elasticache-offender-management-allocation-manager-token-cache-test
                  key: url
            - name: AWS_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  name: hmpps-domain-events-topic
                  key: access_key_id
            - name: AWS_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  name: hmpps-domain-events-topic
                  key: secret_access_key
            - name: DOMAIN_EVENTS_TOPIC_ARN
              valueFrom:
                secretKeyRef:
                  name: hmpps-domain-events-topic
                  key: topic_arn
            - name: HMPPS_API_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  name: hmpps-auth-secrets
                  key: NOMIS_OAUTH_API_CLIENT_ID
            - name: HMPPS_API_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: hmpps-auth-secrets
                  key: NOMIS_OAUTH_API_CLIENT_SECRET
            - name: EMAIL_USERNAME
              valueFrom:
                secretKeyRef:
                  name: parole-data-import
                  key: email_username
            - name: EMAIL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: parole-data-import
                  key: email_password
        - name: allocation-manager-metrics
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/offender-management/offender-management-allocation-manager:latest
          imagePullPolicy: Always
          command: ['sh', '-c', "bundle exec prometheus_exporter --bind 0.0.0.0"]
          ports:
            - containerPort: 9394
          resources:
            limits:
              memory: "200Mi"
              cpu: "50m"
            requests:
              memory: "100Mi"
              cpu: "10m"
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9394
            initialDelaySeconds: 10
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9394
            initialDelaySeconds: 10
            periodSeconds: 60
