deploy/test/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata: 
  name: allow-prometheus-scraping
  namespace: offender-management-test
spec:
  podSelector:
    matchLabels: 
      app: allocation-manager
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels: 
          component: monitoring
